// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should not render the last name 1`] = `
<body>
  .c0 {
  margin-bottom: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 nav {
  margin-top: 10px;
  display: none;
}

.c2 {
  font-size: 8vw;
  font-weight: 700;
  text-transform: lowercase;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c1:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:760px) {
  .c0 nav {
    display: block;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 34px;
  }
}

<div>
    <header
      class="c0"
    >
      <a
        class="c1"
        href="/"
      >
        <span
          class="c2"
        >
          John
        </span>
      </a>
      <div
        class="c3"
      >
        <p>
          Navigation
        </p>
        <p>
          ThemeSwitcher
        </p>
      </div>
    </header>
  </div>
</body>
`;

exports[`<Header /> should render properly 1`] = `
.c0 {
  margin-bottom: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 nav {
  margin-top: 10px;
  display: none;
}

.c2 {
  font-size: 15vw;
  font-weight: 700;
  text-transform: lowercase;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c1:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:760px) {
  .c0 nav {
    display: block;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 80px;
  }
}

<body>
  <div>
    <header
      class="c0"
    >
      <a
        class="c1"
        href="/"
      >
        <span
          class="c2"
        >
          John
          <span
            class=""
            data-testid="header-lastname"
          >
            D
            .
          </span>
        </span>
      </a>
      <div
        class="c3"
      >
        <p>
          Navigation
        </p>
        <p>
          ThemeSwitcher
        </p>
      </div>
    </header>
  </div>
</body>
`;
